<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_list">Movie List</string>
    <string name="minus">-</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="lorem">asdfasdfadfasdfadfasdfadfadfasdfasdfasdfadfadfasdadfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdffadf</string>
    <string name="more_info">More Info</string>
    <string name="rating">Rating</string>
    <string name="revenue">Revenue</string>
    <string name="overview">Overview</string>
    <string name="date_release">Date Release</string>
    <string name="root">Root</string>
    <string name="movie">Movie</string>
    <string name="no_translations">There are no translations in this language</string>
    <string-array name="data_movie_name">
        <item>Aquaman</item>
        <item>A Star Is Born</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>The Girl in the Spider\'s Web</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_movie_date">
        <item>@string/date_movie_aquaman</item>
        <item>@string/date_movie_star_in_born</item>
        <item>@string/date_movie_avanger</item>
        <item>@string/date_movie_bird_box</item>
        <item>@string/date_movie_bohemian</item>
        <item>@string/date_movie_bumblebee</item>
        <item>@string/date_movie_creed_ii</item>
        <item>@string/date_movie_deadpool</item>
        <item>@string/date_movie_how_to_train_dragon</item>
        <item>@string/date_movie_dragonball_broly</item>
        <item>@string/date_movie_glass</item>
        <item>@string/date_movie_hunter_killer</item>
        <item>@string/date_movie_marry_poppins</item>
        <item>@string/date_movie_mortal_engine</item>
        <item>@string/date_movie_preman_pensiun</item>
        <item>@string/date_movie_robinhood</item>
        <item>@string/date_movie_spiderman</item>
        <item>@string/date_movie_the_girl_spiderman</item>
        <item>@string/date_movie_the_mule</item>
        <item>@string/date_movie_venom</item>
    </string-array>
    <string name="date_movie_aquaman">December 7, 2018</string>
    <string name="date_movie_star_in_born">October 3, 2018</string>
    <string name="date_movie_avanger">April 25, 2018</string>
    <string name="date_movie_bird_box">December 13, 2018</string>
    <string name="date_movie_bohemian">October 24, 2018</string>
    <string name="date_movie_bumblebee">December 15, 2018</string>
    <string name="date_movie_creed_ii">November 21, 2018</string>
    <string name="date_movie_deadpool">December 11, 2018</string>
    <string name="date_movie_how_to_train_dragon">January 3, 2019</string>
    <string name="date_movie_dragonball_broly">December 14, 2018</string>
    <string name="date_movie_glass">January 16, 2019</string>
    <string name="date_movie_hunter_killer">October 19, 2018</string>
    <string name="date_movie_marry_poppins">December 13, 2018</string>
    <string name="date_movie_mortal_engine">November 27, 2018</string>
    <string name="date_movie_preman_pensiun">January 17, 2019</string>
    <string name="date_movie_robinhood">November 20, 2018</string>
    <string name="date_movie_spiderman">December 7, 2018</string>
    <string name="date_movie_the_girl_spiderman">October 25, 2018</string>
    <string name="date_movie_the_mule">December 14, 2018</string>
    <string name="date_movie_venom">September 28, 2018</string>
    <string-array name="data_movie_rating">
        <item>68/100</item>
        <item>75/100</item>
        <item>83/100</item>
        <item>70/100</item>
        <item>81/100</item>
        <item>64/100</item>
        <item>67/100</item>
        <item>70/100</item>
        <item>76/100</item>
        <item>74/100</item>
        <item>65/100</item>
        <item>62/100</item>
        <item>67/100</item>
        <item>60/100</item>
        <item>66/100</item>
        <item>57/100</item>
        <item>84/100</item>
        <item>60/100</item>
        <item>64/100</item>
        <item>66/100</item>
    </string-array>
    <string-array name="data_movie_revenue">
        <item>@string/revenue_movie_aquaman</item>
        <item>@string/revenue_movie_star_in_born</item>
        <item>@string/revenue_movie_avanger</item>
        <item>@string/revenue_movie_bird_box</item>
        <item>@string/revenue_movie_bohemian</item>
        <item>@string/revenue_movie_bumblebee</item>
        <item>@string/revenue_movie_creed_ii</item>
        <item>@string/revenue_movie_deadpool</item>
        <item>@string/revenue_movie_how_to_train_dragon</item>
        <item>@string/revenue_movie_dragonball_broly</item>
        <item>@string/revenue_movie_glass</item>
        <item>@string/revenue_movie_hunter_killer</item>
        <item>@string/revenue_movie_marry_poppins</item>
        <item>@string/revenue_movie_mortal_engine</item>
        <item>@string/revenue_movie_preman_pensiun</item>
        <item>@string/revenue_movie_robinhood</item>
        <item>@string/revenue_movie_spiderman</item>
        <item>@string/revenue_movie_the_girl_spiderman</item>
        <item>@string/revenue_movie_the_mule</item>
        <item>@string/revenue_movie_venom</item>
    </string-array>
    <string name="revenue_movie_aquaman">$1,143,689,193.00</string>
    <string name="revenue_movie_star_in_born">$433,888,866.00</string>
    <string name="revenue_movie_avanger">$2,046,239,637.00</string>
    <string name="revenue_movie_bird_box">-</string>
    <string name="revenue_movie_bohemian">$835,137,710.00</string>
    <string name="revenue_movie_bumblebee">$465,895,025.00</string>
    <string name="revenue_movie_creed_ii">$137,944,327.00</string>
    <string name="revenue_movie_deadpool">-</string>
    <string name="revenue_movie_how_to_train_dragon">$508,700,470.00</string>
    <string name="revenue_movie_dragonball_broly">$89,617,139.00</string>
    <string name="revenue_movie_glass">$246,941,965.00</string>
    <string name="revenue_movie_hunter_killer">-</string>
    <string name="revenue_movie_marry_poppins">$348,807,090.00</string>
    <string name="revenue_movie_mortal_engine">$104,236,467.00</string>
    <string name="revenue_movie_preman_pensiun">-</string>
    <string name="revenue_movie_robinhood">$73,260,114.00</string>
    <string name="revenue_movie_spiderman">$374,130,437.00</string>
    <string name="revenue_movie_the_girl_spiderman">$17,894,345.00</string>
    <string name="revenue_movie_the_mule">$171,304,407.00</string>
    <string name="revenue_movie_venom">$855,013,954.00</string>
    <string-array name="data_movie_description">
        <item>@string/description_movie_aquaman</item>
        <item>@string/description_movie_star_in_born</item>
        <item>@string/description_movie_avanger</item>
        <item>@string/description_movie_bird_box</item>
        <item>@string/description_movie_bohemian</item>
        <item>@string/description_movie_bumblebee</item>
        <item>@string/description_movie_creed_ii</item>
        <item>@string/description_movie_deadpool</item>
        <item>@string/description_movie_how_to_train_dragon</item>
        <item>@string/description_movie_dragonball_broly</item>
        <item>@string/description_movie_glass</item>
        <item>@string/description_movie_hunter_killer</item>
        <item>@string/description_movie_marry_poppins</item>
        <item>@string/description_movie_mortal_engine</item>
        <item>@string/description_movie_preman_pensiun</item>
        <item>@string/description_movie_robinhood</item>
        <item>@string/description_movie_spiderman</item>
        <item>@string/description_movie_the_girl_spiderman</item>
        <item>@string/description_movie_the_mule</item>
        <item>@string/description_movie_venom</item>
    </string-array>
    <string name="description_movie_aquaman">Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</string>
    <string name="description_movie_star_in_born">Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</string>
    <string name="description_movie_avanger">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
    <string name="description_movie_bird_box">Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</string>
    <string name="description_movie_bohemian">Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</string>
    <string name="description_movie_bumblebee">On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</string>
    <string name="description_movie_creed_ii">Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</string>
    <string name="description_movie_deadpool">A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder &amp; zero F\'s.</string>
    <string name="change_language">Change Language</string>
    <string name="indonesian">Indonesian</string>
    <string name="english">English</string>
    <string name="setting">Setting</string>
    <string name="nothing_film">Nothing Film</string>
    <string name="reminder">Reminder</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="release_reminder_ket">Reminder showing the movie that released today</string>
    <string name="dialy_reminder">Dialy Reminder</string>
    <string name="reminder_for_return_to_app">Reminder for return to app</string>
</resources>