<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/_10dp"
    android:paddingTop="@dimen/_5dp"
    android:paddingEnd="@dimen/_10dp"
    android:paddingBottom="@dimen/_5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10dp">

            <ImageView
                android:id="@+id/img_movie"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:contentDescription="@string/minus"
                android:scaleType="fitXY" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/title"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_date_release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title"
                    android:layout_marginBottom="@dimen/_16dp"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/tv_moreinfo"
                    android:layout_below="@+id/tv_date_release"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/lorem" />

                <TextView
                    android:id="@+id/tv_moreinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/more_info"
                    android:textStyle="bold" />


            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
